Several changes: - Added sticky bar - Removed dark mode - Added images to story - Fixed apostrophe bug in FAQ

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,9 +2,3 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html,
-  body {
-    @apply dark:bg-trueGray-900;
-  }
-}
