--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-@layer base {
-  html,
-  body {
-    @apply dark:bg-trueGray-900;
-  }
-}
-
 .full-width {
   max-width: 100% !important;
-  padding: 0 !important;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px; /* Adjust based on navbar height */
 }
 
